Bug 121761 - Increase accuracy of rounded corners in those custom shapes that use command X and Y
Summary: Increase accuracy of rounded corners in those custom shapes that use command ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-28 15:17 UTC by Regina Henschel
Modified: 2022-08-20 16:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Compare quarter circle from custom shape with legacy circle (37.25 KB, application/vnd.oasis.opendocument.graphics)
2018-11-28 15:17 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-11-28 15:17:22 UTC
Created attachment 147098 [details]
Compare quarter circle from custom shape with legacy circle

The command X (ellipticalquandrantx) and Y (ellipticalquadranty) in a path are used for the rounded corner rectangle custom shape. They should provide a quarter circle in case of equal radii. But the used Bézier curves have bad parameters for their control points.

The attached document shows the rounded corner rectangle in comparison to a legacy circle and legacy are. On the third page I have drawn lines as radius, to show without Bézier curves involved, where the outline should be.

The solution has to be, that the custom shapes use for the X and Y commands the common tools from basegfx.
Comment 1 Xisco Faulí 2018-12-05 13:00:44 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 1ee8d4f63adf3113a4733a479c8faf9eb65f7b8d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

and

Version: 4.4.0.0.alpha2+
Build ID: b21df5a993a3815cf736fe3d2eab73eee646b38e

in 4.1 and 3.3 it crashes

@Regina, do you plan to work on this ?
Comment 2 Regina Henschel 2018-12-05 13:35:46 UTC
(In reply to Xisco Faulí from comment #1)
> @Regina, do you plan to work on this ?

In principle, I want to work on the problem. At the moment I am studying the code. This is not the only problem in this area. Since I still do not know when and in what order I will tackle the problems, I have not yet assigned the bug to me.
Comment 3 Regina Henschel 2018-12-18 15:17:49 UTC
proposed patch is in https://gerrit.libreoffice.org/#/c/65203/
Comment 4 Commit Notification 2018-12-23 21:43:08 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a4c46ceec433edf0c5de03ea8d36857a455cafd2%5E%21

tdf#121761, tdf#121952 Accurate ellipsequadrant in custom shape

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2018-12-25 11:53:18 UTC
Fixed in Version: 6.3.0.0.alpha0+ (x64)
Build ID: 49fcd3bbb30f93763fc5cb80fa6ac5cec5d00834
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-12-24_22:40:25
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded