tdf#121761, tdf#121952 Draw accurate ellipsequadrant in custom shape

The current solution uses bad valued Bezier curves and does not toggle
direction. The patch delegates to the accurate solutions of basegfx
and introduces correct toggling.

Change-Id: I0beadc884f19fa15a921eee8535684af4529936a